feat: improve services reliability and update local development setup